<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/UnityPoint"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loc1_name"
        android:id="@+id/textView11"
        android:textStyle="bold|italic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView15"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loc2_name"
        android:id="@+id/textView12"
        android:textStyle="bold|italic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView16"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loc3_name"
        android:id="@+id/textView13"
        android:textStyle="bold|italic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView17"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loc4_name"
        android:id="@+id/textView14"
        android:textStyle="bold|italic"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView18"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loc1_info"
        android:id="@+id/textView15"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="17dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView12"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loc2_info"
        android:id="@+id/textView16"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="17dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView13"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loc3_info"
        android:id="@+id/textView17"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="17dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView14"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loc4_info"
        android:id="@+id/textView18"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="17dp"
        android:layout_marginBottom="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Locations"
        android:id="@+id/textView2"
        android:textStyle="normal|bold"
        android:layout_below="@+id/toolbar2"
        android:textColor="#ffffff"
        android:background="#00529b"
        android:padding="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"/>

</RelativeLayout>
